# GE_Effects_Subsidies

./: .gitignore  CHANGES.md  CITATION  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: ge_effects_of_subsidies.tex  ge_effects_of_subsidies_pres.tex  task_paper.py
src/ge_effects_of_subsidies/: __init__.py  config.py  sandbox.ipynb
src/ge_effects_of_subsidies/analysis/: descriptive_analysis.py  task_analysis.py
src/ge_effects_of_subsidies/data/NUTS3_postcode/: pc2020_DE_NUTS-2021_v4.0.numbers
src/ge_effects_of_subsidies/data_management/: __init__.py  clean_data.py  task_data_management.py
src/ge_effects_of_subsidies/final/: __init__.py  task_final.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
