[metadata]
name = ge_effects_of_subsidies
description = GE Effects of Subsidies
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NicolasRoever/ge_effects_of_subsidies
author = Nicolas Roever
author_email = nicolas.roever@wiso.uni-koeln.de
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/NicolasRoever/ge_effects_of_subsidies
    Documentation = https://github.com/NicolasRoever/ge_effects_of_subsidies
    Github = https://github.com/NicolasRoever/ge_effects_of_subsidies
    Tracker = https://github.com/NicolasRoever/ge_effects_of_subsidies/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/ge_effects_of_subsidies/_version.py
